--- a/src/components/account-profile/editor-password.astro
+++ b/src/components/account-profile/editor-password.astro
@@ -51,7 +51,7 @@ import { TEXT_INPUT_SET_NEW_VALUE } from "@misc/event-keys"
 
         const resp = await fetch('/api/webshop/account-profile-update-password',{
             method:"POST",
-            headers:httpRequestHeader(false,'client',false,true),
+            headers:httpRequestHeader(false,'client',false),
             body:JSON.stringify({currentPassword,newPassword})
         })
         const { status, ok } = resp
