--- a/src/components/checkout/member/edit-address-form.astro
+++ b/src/components/checkout/member/edit-address-form.astro
@@ -187,7 +187,7 @@ class CheckoutEditAddressForm extends HTMLElement {
 
             const resp = await fetch('/api/webshop/account-add-update-address',{
                 method:"POST",
-                headers:httpRequestHeader(false,'client',false,true),
+                headers:httpRequestHeader(false,'client',false),
                 body:JSON.stringify({
                     id:addressID,
                     firstName,
