--- a/src/pages/account/new-address.astro
+++ b/src/pages/account/new-address.astro
@@ -20,7 +20,7 @@ const initialSessionID = Astro.cookies.get("sessionID")?.value || ""
 const headerCarouselOff = Astro.cookies.has(headerCarouselOffKey)
 
 const resp = await fetch(`${ FM_CLIENT_WEBSHOP_API_URL }/webshop/account-add-update-address-page-init/0`,{
-    headers:httpRequestHeader(true,'SSR',true,false,initialSessionID,Astro.clientAddress,!headerCarouselOff)
+    headers:httpRequestHeader(true,'SSR',true,initialSessionID,Astro.clientAddress,!headerCarouselOff)
 })
 
 if (!resp.ok) return Astro.redirect(`/sign-in?rd=${encodeURIComponent(Astro.url.pathname)}`)
@@ -62,12 +62,10 @@ const shoppingBagProp:IShoppingBagSidebarProp = {
     productDetailsMap:cartProductDetailsMap
 }
 
-const csrftoken = crypto.randomUUID()
-Astro.cookies.set("csrf_token",csrftoken,sessionCookieOption(isProduction))
+Astro.cookies.set("csrf_token",resp.headers.get("X-CSRF-TOKEN"),sessionCookieOption(isProduction))
 ---
 
 <Layout {...{
-    csrftoken,
     shoppingBagProp,
     paymentInProcess,
     selCollectionPoint,
@@ -105,7 +103,7 @@ import { httpRequestHeader, sessionLost } from "@misc"
 
         const resp = await fetch('/api/webshop/account-add-update-address',{
             method:"POST",
-            headers:httpRequestHeader(false,'client',false,true),
+            headers:httpRequestHeader(false,'client',false),
             body:JSON.stringify({firstName,lastName,line1,line2,city,stateProvince,postcode,countryID,isDefault})
         })
         
