--- a/src/pages/checkout.astro
+++ b/src/pages/checkout.astro
@@ -30,7 +30,7 @@ const isProduction = FM_ENV_MODE === 'production'
 const initialSessionID = Astro.cookies.get("sessionID")?.value || ""
 
 const resp = await fetch(`${ FM_CLIENT_WEBSHOP_API_URL }/webshop/checkout-page-init`,{
-    headers:httpRequestHeader(true,'SSR',true,false,initialSessionID,Astro.clientAddress,false)
+    headers:httpRequestHeader(true,'SSR',true,initialSessionID,Astro.clientAddress,false)
 })
 if (!resp.ok) return Astro.redirect('/')
 
@@ -70,12 +70,10 @@ Astro.cookies.set('sessionID',sessionID,sessionCookieOption(isProduction,expires
 
 const isCheckoutPage = Astro.url.pathname === '/checkout'
 
-const csrftoken = crypto.randomUUID()
-Astro.cookies.set("csrf_token",csrftoken,sessionCookieOption(isProduction))
+Astro.cookies.set("csrf_token",resp.headers.get("X-CSRF-TOKEN"),sessionCookieOption(isProduction))
 ---
 
 <Layout {...{
-    csrftoken,
     paymentInProcess,
     selCollectionPoint,
     prfCollectionPoint,
