--- a/src/components/catalogue-item/index.astro
+++ b/src/components/catalogue-item/index.astro
@@ -122,7 +122,7 @@ import { observer } from "./observer";
                     setLoading(true)
                     const resp = await fetch('/api/webshop/product-add-qty',{
                         method:"POST",
-                        headers:httpRequestHeader(false,'client',true,true),
+                        headers:httpRequestHeader(false,'client',true),
                         body:JSON.stringify({id,changeInQuantity:1,dateAdded:Date.now()})
                     })
 
