--- a/src/components/sign-in-form/index.astro
+++ b/src/components/sign-in-form/index.astro
@@ -66,7 +66,7 @@ import { pageToken } from "@stores"
 
         const resp = await fetch('/api/webshop/sign-in',{
             method:'POST',
-            headers:httpRequestHeader(false,'client',false,true),
+            headers:httpRequestHeader(false,'client',false),
             body:JSON.stringify({email,password,privateDevice})
         })
         const { status, ok } = resp
