--- a/src/pages/account/edit-address.astro
+++ b/src/pages/account/edit-address.astro
@@ -23,7 +23,7 @@ const initialSessionID = Astro.cookies.get("sessionID")?.value || ""
 const headerCarouselOff = Astro.cookies.has(headerCarouselOffKey)
 
 const resp = await fetch(`${ FM_CLIENT_WEBSHOP_API_URL }/webshop/account-add-update-address-page-init/${id}`,{
-    headers:httpRequestHeader(true,'SSR',true,false,initialSessionID,Astro.clientAddress,!headerCarouselOff)
+    headers:httpRequestHeader(true,'SSR',true,initialSessionID,Astro.clientAddress,!headerCarouselOff)
 });
 
 const { status, ok } = resp
@@ -68,12 +68,10 @@ const shoppingBagProp:IShoppingBagSidebarProp = {
     productDetailsMap:cartProductDetailsMap
 }
 
-const csrftoken = crypto.randomUUID()
-Astro.cookies.set("csrf_token",csrftoken,sessionCookieOption(isProduction))
+Astro.cookies.set("csrf_token",resp.headers.get("X-CSRF-TOKEN"),sessionCookieOption(isProduction))
 ---
 
 <Layout {...{
-    csrftoken,
     shoppingBagProp,
     paymentInProcess,
     selCollectionPoint,
@@ -113,7 +111,7 @@ import { httpRequestHeader, sessionLost } from "@misc"
 
         const resp = await fetch('/api/webshop/account-add-update-address',{
             method:"POST",
-            headers:httpRequestHeader(false,'client',false,true),
+            headers:httpRequestHeader(false,'client',false),
             body:JSON.stringify({id,firstName,lastName,line1,line2,city,stateProvince,postcode,countryID,isDefault})
         })
         
