--- a/src/components/checkout/guest/email-password.astro
+++ b/src/components/checkout/guest/email-password.astro
@@ -10,10 +10,10 @@ const encodedPathname = encodeURIComponent(Astro.url.pathname)
     <div class='uppercase text-xs tracking-widest xs:text-sm xs:tracking-[0.2rem]'>
         2. Contact Information
     </div>
-    <div class="text-[0.7rem] tracking-widest text-gray-500 leading-5 align-middle">
+    {acceptMembership && <div class="text-[0.7rem] tracking-widest text-gray-500 leading-5 align-middle">
         Already a member?
-        <a href=`/sign-in?rd=${encodedPathname}` class="font-bold underline text-black">Sign In</a>
-    </div>
+        <a href={`/sign-in?rd=${encodedPathname}`} class="font-bold underline text-black">Sign In</a>
+    </div>}
 </div>
 <TextInput 
     type='email' 
@@ -21,7 +21,7 @@ const encodedPathname = encodeURIComponent(Astro.url.pathname)
     name='email' 
     placeholder="Email Address" 
     required 
-    className='mb-6'
+    className={acceptMembership ? 'mb-6' : 'mb-2'}
     client:only="solid-js"
     maxLength={100}
 />
