--- a/src/components/catalogue-item/index.astro
+++ b/src/components/catalogue-item/index.astro
@@ -48,7 +48,7 @@ const imageLen = images.filter(e=>e.catalogue).length
 
 <script>
 import type { IAddToBagResponse } from "@components/cart/interfaces";
-import { dispatchInternalEvent, formatPrice, httpRequestHeader, sessionLost, showErrorModal } from "@misc";
+import { dispatchInternalEvent, formatPrice, httpRequestHeader } from "@misc";
 import type { IProduct, IStockQuantity } from "./interfaces";
 import { selectedCollectionPoint, otherClientPaymentInProcess, shopNameMap } from "@stores";
 import { ADD_TO_BAG_FROM_CATALOGUE, CART_QTY_UPDATE, CART_UPDATE, PRODUCT_UPDATE } from "@misc/event-keys";
