--- a/src/components/checkout/billing-address-wrapper.astro
+++ b/src/components/checkout/billing-address-wrapper.astro
@@ -15,7 +15,7 @@ import Checkbox from "@components/input-fields/checkbox";
 </div>
 
 <script>
-import { homeDeliveryBillingSameAsShipping, selectedCollectionPoint, shopNameMap } from "@stores"
+import { homeDeliveryBillingSameAsShipping, selectedCollectionPoint } from "@stores"
     const billingSameAsShippingCheckboxContainer = document.getElementById("billing-same-as-shipping-checkbox-container") as HTMLDivElement
     const billingAddresses = document.getElementById('billing-addresses') as HTMLDivElement
 
